# distillation

./: .cursorignore  .gitignore  AIRGAP_SETUP.md  ARCHITECTURE.md  CHANGELOG_QUALITY_GATES.md  Dockerfile  MULTI_USER_SETUP.md  PRODUCTION_QUALITY_GATES.md  QUALITY_GATES_QUICKSTART.md  README.md  SETUP_COMPLETE.txt  SPEEDUP_PHASE1.md  SPEEDUP_PHASE1_5.md  STARTUP_GUIDE.md  THERMAL_AGENT.md  environment.yml  experiment_log.jsonl  install.sh  pixi.toml  pyproject.toml  requirements.txt  run_autonomous_production.sh  run_golden.sh  smoke_test.sh  thermal_agent.jsonl
configs/: agent_config.json  defaults.json  domain_prompts.json  example_minillm.yaml  golden_pipeline.json  mlx_recommended.json  models.json  overrides.json.example  phase2_run21.json  phase2_run22.json  phase2_run23.json  phase3_run31.json  phase3_run32.json  phase3_run33.json  thermal.json  watchdog_rules.json
cpp/: CMakeLists.txt  README.md  main.cpp  watchdog_main.cpp
distil/: __init__.py  eval_gradio.py
distill/: __init__.py  airgap.py  artifact_detector.py  cache_datasets.py  cache_models.py  check_padding.py  cli_common.py  cpp_eval_utils.py  dashboard.py  data_pipeline.py  distill_forward.py  distill_minillm.py  distill_mlx.py  distill_sft.py  distill_unsloth.py  early_stopping_callback.py  eval_gradio.py  eval_quality.py  experiment_log.py  expert_pipeline.py  export_coreml.py  fan_control_popup.py  filter_dataset.py  generate_synthetic_data.py  magpie_synth.py  metrics_io.py  mlx_eval_utils.py  model_path_helper.py  monitor_cpu_gpu_temp.py  paths.py  plot_gguf_pipeline.py  plot_training.py  run_benchmarks.py  run_distillation_agent.py  run_eval.py  setup_airgap.py  show_algorithms.py  test_fan_control.py  thermal_agent.py  train_utils.py  (+3 more)
distill/backends/: __init__.py  cpp_inference.py  cpp_metrics_adapter.py  cpp_thermal_bridge.py  cpp_utils.py  export_bridge.py  llama_struct_bridge.py  loader_backends.py  lora_bridge.py  mlx_utils.py  model_format.py  struct_wrappers.py  universal_loader.py
distill/config/: schemas.py
distill/cpp/: CMakeLists.txt  __init__.py  export_bindings.cpp  llama_bindings.cpp  lora_bindings.cpp  metric_streamer.cpp  pybind_module.cpp  thermal_bindings.cpp
distill/eval/: benchmarks.py  gradio_ui.py  gradio_ui_css.py  gradio_ui_handlers.py  gradio_ui_handlers_eval.py  gradio_ui_handlers_synth.py  gradio_ui_help_text.py  gradio_ui_tab_eval.py  gradio_ui_tab_export.py  gradio_ui_tab_golden.py  gradio_ui_tabs.py  mt_bench.py  (+9 more)
docs/: AIRGAP_SETUP.md  ARCHITECTURE.md  AUTONOMOUS_AGENT.md  BACKEND_OPTIMIZATIONS.md  CHANGELOG_QUALITY_GATES.md  INDEX.md  LLAMA_CPP_STUDENT.md  MULTI_USER_SETUP.md  OPEN_MODELS.md  PRODUCTION_QUALITY_GATES.md  QUALITY_GATES_QUICKSTART.md  QUANTIZATION.md  SOFTWARE_DESIGN_DOCUMENT.md  SPEEDUP_PHASE1.md  SPEEDUP_PHASE1_5.md  STARTUP_GUIDE.md  THERMAL_AGENT.md  UNIVERSAL_GRADIO.md  USER_MANUAL.md  WATCHDOG.md  air-gapped.md
filtered_data/: filter_stats.json  state.json
scripts/: airgap.py  artifact_detector.py  build_cpp.sh  cache_datasets.py  cache_models.py  chaos_monkey.py  check_padding.py  cpp_eval_utils.py  dashboard.py  data_pipeline.py  distill_forward.py  distill_minillm.py  distill_mlx.py  distill_sft.py  distill_unsloth.py  download_bartowski_gguf.sh  early_stopping_callback.py  eval_gradio.py  eval_quality.py  experiment_log.py  expert_pipeline.py  export_coreml.py  export_student_gguf.sh  fan_control_popup.py  filter_dataset.py  generate_synthetic_data.py  gradio.sh  install.sh  install_thermal_agent.sh  kill_ui.sh  launch_ui.py  magpie_synth.py  mlx_eval_utils.py  model_path_helper.py  monitor_cpu_gpu_temp.py  monitor_cpu_gpu_temp.sh  plot_gguf_pipeline.py  plot_training.py  run.sh  run_autonomous_production.sh  (+17 more)
smoke_test_20260402_181500/: README.md  config.json  generation_config.json  metrics.jsonl  quality_metrics.json
tests/: test_cpp_bindings.py  test_data_pipeline.py  test_ui_components.py
tools/: packaging_migrate.py  split_launch_ui.py
(+168 files in other folders)
