[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "distill"
version = "0.1.0"
description = "On-device LLM knowledge distillation toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "transformers>=4.38",
  "datasets>=2.14",
  "accelerate>=0.24",
  "peft>=0.9",
  "evaluate>=0.4",
  "trl>=0.10",
  "gradio>=6.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.0",
  "rich>=13.0",
  "psutil>=5.0",
  "plotly>=5.0",
  "huggingface-hub>=0.20",
  "pyyaml>=6.0",
]

[project.scripts]
distill-agent = "distill.orchestration.agent:main"
distill-ui = "distill.ui.entry:main"
distill-dashboard = "distill.ui.dashboard:main"
distill-eval-ui = "distill.eval.gradio_ui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["distill*", "distil*"]
